[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Template.gd" type="Script" id=1]
[ext_resource path="res://Effects/ParallaxBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effects/ParallaxBackgroundFront1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Neutralfonts/Arvo48.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/return1icon.png" type="Texture" id=5]
[ext_resource path="res://Effects/Fade_in.tscn" type="PackedScene" id=6]
[ext_resource path="res://Effects/Fade_out.tscn" type="PackedScene" id=7]

[node name="Start" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 1520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="ParallaxBackground" type="ParallaxBackground" parent="." index="0"]

layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
scroll_offset = Vector2( 0, 0 )
scroll_base_offset = Vector2( 0, 0 )
scroll_base_scale = Vector2( 1, 1 )
scroll_limit_begin = Vector2( 0, 0 )
scroll_limit_end = Vector2( 0, 0 )
scroll_ignore_camera_zoom = true

[node name="Mainbg1" parent="ParallaxBackground" index="0" instance=ExtResource( 2 )]

[node name="Mainbg2" parent="ParallaxBackground" index="1" instance=ExtResource( 3 )]

[node name="CenterContainer" type="Node2D" parent="." index="1"]

_sections_unfolded = [ "Anchor" ]

[node name="Label" type="Label" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.929412, 0.0862745, 0.317647, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Project"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Hint", "Rect", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin", "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 109.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
icon = ExtResource( 5 )
flat = true
align = 1
_sections_unfolded = [ "Rect", "Size Flags", "custom_fonts" ]

[node name="Fade" parent="." index="2" instance=ExtResource( 6 )]

visible = false

[node name="Fade2" parent="." index="3" instance=ExtResource( 7 )]

visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]

[connection signal="fade_finished" from="Fade" to="." method="_on_Fade_fade_finished"]

[connection signal="fade_finished" from="Fade2" to="." method="_on_Fade2_fade_finished"]


